force-app/main/default/objects/AI_Security_Audit_Detail__c/AI_Security_Audit_Detail__c.object-meta.xml
<CustomObject>
    <label>Security Audit Detail</label>
    <nameField>
        <displayFormat>AD-{000000}</displayFormat>
        <label>Detail #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Audit Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>