force-app/main/default/objects/AI_Security_Audit_Detail__c/fields/AI_Security_Audit__c.field-meta.xml
<CustomField>
    <fullName>AI_Security_Audit__c</fullName>
    <label>Security Audit</label>
    <referenceTo>AI_Response__c</referenceTo>
    <relationshipLabel>Security Audit Detail</relationshipLabel>
    <relationshipName>Security_Audit_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>