force-app/main/default/objects/AI_Security_Audit_Detail__c/fields/Prompt_Action_Details__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Action_Details__c</fullName>
    <label>Prompt Action Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>