force-app/main/default/objects/AI_Security_Audit_Detail__c/fields/Prompt_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Action_Type__c</fullName>
    <label>Prompt Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prompt_Action</valueSetName>
    </valueSet>
</CustomField>